Modify code based on Lint Inspection Results